Changes in 0.17
  - #266:
    - doctest now annotates its internal marker string as a `String`, to prevent misbehaviour in `OverloadedStrings` environments. This has a theoretical chance of breakage; if you're affected, please open an issue.
    - `evalEcho` no longer preserves `it`.

Changes in 0.16.3
  - Add a cursor to highlight the differing portion between the
    expected and actual output. (#249)
  - GHC 8.10 compatibility. (#247, #257)

Changes in 0.16.2
  - Add doctest's necessary-for-operation options to GHC's command
    line at the end, so that they over-ride anything provided by the
    user. (#233)
  - Allow GHC 8.8.

Changes in 0.16.1
  - Fix loading plugins in doctests. (#224)
  - Require QuickCheck 2.13.1 or newer.
  - Remove dependency on `with-location`

Changes in 0.16.0.1
  - Bump bounds to allow GHC 8.6. (#210)

Changes in 0.16.0
  - Output format has changed to (hopefully) be more machine consumable. (#200)

Changes in 0.15.0
  - Add `--verbose` for printing each test as it is run

Changes in 0.14.1
  - Add test assets to source tarball (see #189)

Changes in 0.14.0
  - GHC 8.4 compatibility.

Changes in 0.13.0
  - Add `--preserve-it` for allowing the `it` variable to be preserved between examples

Changes in 0.12.0
  - Preserve the 'it' variable between examples

Changes in 0.11.4
  - Add `--fast`, which disables running `:reload` between example groups

Changes in 0.11.3
  - Add `--info`
  - Add `--no-magic`

Changes in 0.11.2
  - Make `...` match zero lines

Changes in 0.11.1
 - Fix an issue with Unicode output on Windows (see #149)

Changes in 0.11.0
 - Support for GHC 8.0.1-rc2

Changes in 0.10.1
 - Automatically expand directories into contained Haskell source files (thanks @snoyberg)
 - Add cabal_macros.h and autogen dir by default (thanks @snoyberg)

Changes in 0.10.0
 - Support HASKELL_PACKAGE_SANDBOXES (thanks @snoyberg)

Changes in 0.9.13
 - Add ellipsis as wildcard

Changes in 0.9.12
 - Add support for GHC 7.10

Changes in 0.9.11