@@ -1,0 +1,11 @@
+module A where
+
+stderr :: Bool
+stderr = True
+
+stdout :: String
+stdout = "hello"
+
+-- |
+-- >>> 3 + 3
+-- 6
