@@ -1,3 +1,6 @@
+Unreleased
+  - Don't use unqualified references to `stderr` or `stdout` which may collide with definitions in user code. (#201)
+
 Changes in 0.17
   - #266:
     - doctest now annotates its internal marker string as a `String`, to prevent misbehaviour in `OverloadedStrings` environments. This has a theoretical chance of breakage; if you're affected, please open an issue.
